{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 44,
  "lineage": "95949d29-79fe-3d0e-65b3-ca4c96a1516b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-15T19:36:01.666-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/unique-grid-462216-k2/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/global/networks/openwebui-vpc",
            "priority": 1000,
            "project": "unique-grid-462216-k2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.openwebui_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-15T19:36:01.658-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/unique-grid-462216-k2/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/global/networks/openwebui-vpc",
            "priority": 1000,
            "project": "unique-grid-462216-k2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.openwebui_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-15T19:36:01.725-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/unique-grid-462216-k2/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/global/networks/openwebui-vpc",
            "priority": 1000,
            "project": "unique-grid-462216-k2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/global/firewalls/allow-ssh",
            "source_ranges": [
              "73.17.243.189/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.openwebui_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "openwebui",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 200,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/zones/us-east4-a/disks/openwebui"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-06-15T19:36:13.977-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/unique-grid-462216-k2/zones/us-east4-a/instances/openwebui",
            "instance_id": "4047270968830344690",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "ssh-keys": "openwebui:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDVC1ytbQTlWT+X0j7DDKbKFAE/o5NMdSZJYXADTUPXjMuIrncvIbdEQFW/1RdG/feN4wDlm2zfCidscBtRV1mDoYQB6v1ly8xOljhxMUMqBWpj8h3y7mysPpT064WO+n8adJjmngHzcRoFijJG3Nm1I7bcC8yLjhoAK1oimnMgvQOCgb4mN2C//TPk/WLo7SNl5d13nG6MZ8+r1mwkCWRv1Ocvjxma60QPVKWp2egTt40Ls6hDdh464qBr5PnvqMj6gZtAjMiog4LeqFKGe2Kd1101XIpekTV9FrtiiYjx9/ppkNUVQAVPCyyI0NUKDtPfBnKj7yrnSFdQuP0oy1eandqpYIBrJ9z1wPCLH/592hcZBOqWavgE1IWGBr9G0EcMKeDgFwJdtxKfB6sB+V96ynWrnHe3u92sAjoJNe8 [...]
              "startup-script": "#!/bin/bash\n\n# Fail if one command fails\nset -e\nexport DEBIAN_FRONTEND=noninteractive\n\n# Setup Docker\napt-get update\napt-get install -y ca-certificates curl gnupg apache2-utils sqlite3 nginx\n\ninstall -m 0755 -d /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc\nchmod a+r /etc/apt/keyrings/docker.asc\n\necho   \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https:// [...]
            },
            "metadata_fingerprint": "FUWHTxgYoS8=",
            "name": "openwebui",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.21.87.192",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/global/networks/openwebui-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/regions/us-east4/subnetworks/openwebui-subnet",
                "subnetwork_project": "unique-grid-462216-k2"
              }
            ],
            "project": "unique-grid-462216-k2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/zones/us-east4-a/instances/openwebui",
            "service_account": [
              {
                "email": "vm-service-account@unique-grid-462216-k2.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "https",
              "ssh",
              "terraform"
            ],
            "tags_fingerprint": "XfGPQ63p9c4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east4-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "startup-script",
                  "type": "string"
                }
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.debian",
            "google_compute_network.openwebui_vpc",
            "google_compute_subnetwork.openwebui_subnet",
            "google_service_account.openwebui",
            "random_password.password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "openwebui_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/unique-grid-462216-k2/global/networks/openwebui-vpc",
            "mtu": 0,
            "name": "openwebui-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "4034782634157686249",
            "numeric_id": "4034782634157686249",
            "project": "unique-grid-462216-k2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/global/networks/openwebui-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "openwebui_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-15T19:36:01.931-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/unique-grid-462216-k2/regions/us-east4/subnetworks/openwebui-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "openwebui-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/global/networks/openwebui-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "unique-grid-462216-k2",
            "purpose": "PRIVATE",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-grid-462216-k2/regions/us-east4/subnetworks/openwebui-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2921667053953891838
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.openwebui_vpc"
          ]
        }
      ]
    }
  ]
}